syntax = "proto3";

import "Data.proto";
import "Job.proto";
import "Status.proto";

message ConnectionRequest {
    int32 user_id = 1;
    enum Status {
        HEARTBEAT = 0;
        CLOSE_CONNECTION = 1;
    }
    Status status = 2;
}

message SingleRequest {
    oneof request {
        ConnectionRequest connection_request = 1;
        JobSubmission job_submission = 2;
        DataRetrievalRequest data_retrieval_request = 3;
        JobStatusRequest job_status_request = 4;
    }
}

message SingleResponse {
    oneof response {
        JobSubmissionResponse job_submission_response = 1;
        DataRetrievalResponse data_retrieval_response = 2;
        JobStatusResponse job_status_response = 3;
    }
}